<resources>
    <string name="app_name">EZBooking</string>
    <string name="ezbooking">EZBooking</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="didn_t_have_an_account">Didn\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="rpassword">password</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="email1">abc@gmail.com</string>
    <string name="new_password">New password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="re_enter">Re-enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="Rsign_up">SIGN UP</string>
    <string name="rusername">Username</string>
    <string name="categories">Categories</string>
    <string name="click_here_to_sign_in">Click here to sign in</string>
    <string name="emailL">Email</string>

    <string-array name="room_types">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Suite</item>
    </string-array>
    <string-array name="time_slots">
        <item>7.00</item>
        <item>10.00</item>
        <item>12.30</item>
        <item>18.00</item>
        <item>22.00</item>
    </string-array>
    <string name="Movie1">movie img</string>
    <string name="Hotel1">hotel img</string>
    <string name="location_icon">Location Icon</string>


</resources>