<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg3">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ezbooking"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:padding="2dp"
        android:hint="@string/username"
        android:layout_marginTop="32sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/mainbg"/>

    <EditText
        android:id="@+id/email1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:padding="2dp"
        android:hint="@string/email"
        android:layout_marginTop="32sp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/mainbg"/>

    <EditText
        android:id="@+id/rpassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:padding="2dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:layout_marginTop="32sp"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/mainbg"/>


    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>

<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progressBar"
    android:layout_centerInParent="true"
    android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/sign_in"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_sign_in"
        android:gravity="center"/>


</LinearLayout>